--- a/coroutineshub/settings.gradle
+++ b/coroutineshub/settings.gradle
@@ -7,4 +7,6 @@ dependencyResolutionManagement {
   }
 }
 rootProject.name = "coroutineshub"
-include ':app'
+include ':presentation'
+include ':domain'
+include ':data'
