--- a/coroutineshub/data/build.gradle
+++ b/coroutineshub/data/build.gradle
@@ -40,5 +40,6 @@ dependencies {
   implementation project(':domain')
 
   implementation dataDependencies.kotlin
+  implementation dataDependencies.javaxInject
 
 }
