--- a/coroutineshub/domain/build.gradle
+++ b/coroutineshub/domain/build.gradle
@@ -1,9 +1,12 @@
 plugins {
-  id 'java-library'
   id 'kotlin'
 }
 
-java {
-  sourceCompatibility = JavaVersion.VERSION_1_7
-  targetCompatibility = JavaVersion.VERSION_1_7
+dependencies {
+  def domainDependencies = rootProject.ext.domainDependencies
+
+  implementation project(':utils')
+
+  implementation domainDependencies.kotlin
+  implementation domainDependencies.javaxInject
 }
