--- a/coroutineshub/build.gradle
+++ b/coroutineshub/build.gradle
@@ -6,8 +6,10 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:7.0.4"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+    classpath "com.android.tools.build:gradle:$gradleVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+    classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
