Feature auth added. Updated gradles

--- a/coroutineshub/presentation/build.gradle
+++ b/coroutineshub/presentation/build.gradle
@@ -33,7 +33,7 @@ android {
     }
   }
 
-//  dynamicFeatures = ['']
+  dynamicFeatures = [':features:auth']
 
   compileOptions {
     sourceCompatibility globalConfiguration.javaVersion
