--- a/coroutineshub/presentation/src/main/AndroidManifest.xml
+++ b/coroutineshub/presentation/src/main/AndroidManifest.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
 		package="com.coroutineshub">
 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 	<application
+			android:name="com.coroutineshub.App"
 			android:allowBackup="true"
 			android:icon="@mipmap/ic_launcher"
+			android:usesCleartextTraffic="true"
 			android:label="@string/app_name"
 			android:roundIcon="@mipmap/ic_launcher_round"
 			android:supportsRtl="true"
-			android:theme="@style/Theme.Coroutineshub">
+			android:theme="@style/Theme.App.Starting">
 		<activity
-				android:name=".MainActivity"
-				android:exported="true">
+				android:name="com.coroutineshub.MainActivity"
+				android:exported="true"
+				android:launchMode="singleTask"
+				android:screenOrientation="portrait"
+				android:windowSoftInputMode="adjustResize"
+				tools:ignore="LockedOrientationActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
